# aoc-2024

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/lib/: array.h  file.h  graph.h  matrix.h  parse.h
lib/src/: array.c  file.c  graph.c  matrix.c  parse.c
src/01/: main.c
src/02/: main.c
src/03/: main.c
src/04/: main.c
src/05/: main.c
src/06/: main.c
src/07/: main.c
src/08/: main.c
src/09/: main.c
src/10/: main.c
